test/fail/Sections-10.agda
open import Common.Prelude

_test_ : Nat → Nat → Nat
m test_ = m +_
